--- a/app/src/main/assets/privacy_policy.html
+++ b/app/src/main/assets/privacy_policy.html
@@ -28,7 +28,6 @@
 <h1>Privacy Policy</h1>
 <p><strong>Last updated:</strong> May 26, 2025</p>
 
-
 <h2>1. Information We Collect</h2>
 <p>We collect information such as your full name, email address, resume, education details, and job preferences.</p>
 
@@ -46,15 +45,13 @@
 <p>We do not share your data with third parties unless required by law.</p>
 
 <h2>5. Your Rights</h2>
-<p>You can  contacting us at support@yourapp.com.
+<p>You can  contacting us at  info.smilejobs@gmail.com.
     - You can update your profile information at any time.
     - You can request deletion of your account and data.
     - You can contact us for questions or data concerns.</p>
-
 <h2>6. Contact Us</h2>
-<p>Email: <a href="mailto:support@smilejob.com">support@smilejob.com</a></p>
+<p>Email: <a href="mailto:info.smilejobs@gmail.com">info.smilejobs@gmail.com</a></p>
 
-<p>Thank you for trusting our app. and Thank you for trusting us with your information.
-</p>
+<p>Thank you for trusting our app. and Thank you for trusting us with your information.</p>
 </body>
 </html>
