about to finish

--- a/app/src/main/assets/privacy_policy.html
+++ b/app/src/main/assets/privacy_policy.html
@@ -45,12 +45,12 @@
 <p>We do not share your data with third parties unless required by law.</p>
 
 <h2>5. Your Rights</h2>
-<p>You can  contacting us at  info.smilejobs@gmail.com.
+<p>You can  contacting us at  iinfo.samarthjob@gmail.com.
     - You can update your profile information at any time.
     - You can request deletion of your account and data.
     - You can contact us for questions or data concerns.</p>
 <h2>6. Contact Us</h2>
-<p>Email: <a href="mailto:info.smilejobs@gmail.com">info.smilejobs@gmail.com</a></p>
+<p>Email: <a href="mailto:info.samarthjob@gmail.com">info.samarthjob@gmail.com</a></p>
 
 <p>Thank you for trusting our app. and Thank you for trusting us with your information.</p>
 </body>
